--- a/main.tex
+++ b/main.tex
@@ -22,10 +22,10 @@
 % Include section in journal if known, otherwise delete
 %\paperfield{Journal Section}
 
-\title{Should we use ERA5 for statistical precipitation downscaling with analog methods?}
+\title{Should analog methods use ERA5 for statistical precipitation downscaling? }
 
 % List abbreviations here, if any. Please note that it is preferred that abbreviations be defined at the first instance they appear in the text, rather than creating an abbreviations list.
-\abbrevs{ABC, a black cat; DEF, doesn't ever fret; GHI, goes home immediately.}
+\abbrevs{AMs, analog methods; ....}
 
 % Include full author names and degrees, when required by the journal.
 % Use the \authfn to add symbols for additional footnotes and present addresses, if any. Usually start with 1 for notes about author contributions; then continuing with 2 etc if any author has a different present address.
@@ -56,6 +56,17 @@ This is a generic template designed for use by multiple journals, which includes
 \end{abstract}
 
 \section{Introduction}
+
+Analog methods (AMs), which are part of the statistical downscaling techniques, aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered, providing an statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approach, but mainly with different selections of predictors.
+
+AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for the large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. There are globally two main types of reanalysis products: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and thus assimilate surface data only, and those that aim for accuracy over a more recent period and that assimilate a maximum of observations, including multiple satellite products. The accuracy of the reanalyses depends on the quality of the model physics and that of the analysis process, thus on the quantity and quality of the assimilated observations \citep{Dee2011a}.
+
+The choice of a reanalysis dataset to be used in an AM can be driven by the context of the application, for example if it requires to cover the 20th century or to be used in an operational context, with the target situation being provided by a NWP model. In the first case, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In the second case, one should prefer a reanalysis that is produced by the same model as the operational forecast to reduce the inter-models biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider. 
+
+NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many applications of AMs \citep{Timbal2003, Bontron2004, Wetterhall2005a, Gangopadhyay2005, Altava-Ortiz2006, Barrera2007, Cannon2007, Matulla2007, Bliefernicht2007, Maurer2008, BenDaoud2009, Wu2012, Marty2012, Teng2012, Horton2012, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep {BenDaoud2009, Willems2011b, JakobThemessl2011a, BenDaoud2011, Turco2011a, Franke2011, Pascual2012b, Schenk2012, Ribalaygua2013a, Osca2013, Radanovics2013, Martin2014b, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese products, the Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, were not used in AMs to the author knowledge. Newer products, such as NCEP's the Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} or MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017} are not much used yet in AMs. One can often observe a lag between the release of a new reanalysis dataset and its adoption in AMs.
+
+Most applications of AMs are based on a single reanalysis dataset and the impact of this choice is overlooked. \citet{BenDaoud2009} compared NR-1 to ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT and 20CR and found out that the choice of the reanalysis dataset has a non-negligible impact on the performance of the AMs that can even be greater than the choice of the predictor variables. They concluded that the role of the reanalyses should not be underestimated. Such an influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM are significant. The conclusion was similar to that of \citet{Dayon2015}, in that the influence of the reanalysis can be bigger than that of the predictors selection. Some recommendations were established to guide for the choice of the reanalysis depending on the period and the predictors of interest. Globally, more recent products that assimilate more data show better skills \citep{Horton2018b}. In that respect, the recent release of ERA5 \citep{Hersbach2019} raises the question of how better it can be compared to its predecessor ERA-Interim, and what are the benefit and eventual pitfall of its higher spatial and temporal resolutions.
+
 
 \section{Data and methods}
 
