--- a/references.bib
+++ b/references.bib
@@ -229,3 +229,481 @@
     title = {{Global reanalysis: goodbye ERA-Interim, hello ERA5}},
     year = {2019}
 }
+@article{Lorenz1969,
+	author = {Lorenz, EN},
+	doi = {10.1175/1520-0469(1969)26<636:aparbn>2.0.co;2},
+	journal = {Journal of the Atmospheric Sciences},
+	pages = {636--646},
+	title = {{Atmospheric predictability as revealed by naturally occurring analogues}},
+	volume = {26},
+	year = {1969}
+}
+@techreport{Rummukainen1997,
+	author = {Rummukainen, M},
+	booktitle = {SMHI Reports Meteorology and Climatology},
+	number = {80},
+	title = {{Methods for statistical downscaling of GCM simulations.}},
+	url = {http://agris.fao.org/agris-search/search/display.do?f=2012/OV/OV201205379005379.xml;SE19970167745},
+	year = {1997}
+}
+@article{Maraun2010,
+	author = {Maraun, Douglas and Wetterhall, Fredrik and Chandler, R E and Kendon, E J and Widmann, M and Brienen, S and Rust, H W and Sauter, T and Theme{\ss}l, M and Venema, V K C and Chun, K P and Goodess, C M and Jones, R G and Onof, C and Vrac, M and Thiele-Eich, I},
+	doi = {10.1029/2009RG000314},
+	journal = {Reviews of Geophysics},
+	number = {RG3003},
+	pages = {1--34},
+	title = {{Precipitation downscaling under climate change: Recent developements to bridge the gap between dynamical models and the end user}},
+	volume = {48},
+	year = {2010}
+}
+@article{Laloyaux2016,
+	author = {Laloyaux, Patrick and Balmaseda, Magdalena and Dee, Dick and Mogensen, Kristian and Janssen, Peter},
+	doi = {10.1002/qj.2629},
+	isbn = {1023601003071},
+	issn = {1477870X},
+	journal = {Quarterly Journal of the Royal Meteorological Society},
+	number = {694},
+	pages = {65--78},
+	title = {{A coupled data assimilation system for climate reanalysis}},
+	volume = {142},
+	year = {2016}
+}
+@article{Kuentz2015,
+	author = {Kuentz, A. and Mathevet, T. and Gailhard, J. and Hingray, B.},
+	doi = {10.5194/hess-19-2717-2015},
+	issn = {16077938},
+	journal = {Hydrology and Earth System Sciences},
+	keywords = {2 read now},
+	mendeley-tags = {2 read now},
+	number = {6},
+	pages = {2717--2736},
+	title = {{Building long-term and high spatio-temporal resolution precipitation and air temperature reanalyses by mixing local observations and global atmospheric reanalyses: The ANATEM model}},
+	volume = {19},
+	year = {2015}
+}
+@article{Caillouet2016,
+	author = {Caillouet, Laurie and Vidal, Jean-Philippe and Sauquet, Eric and Graff, Benjamin},
+	doi = {10.5194/cp-12-635-2016},
+	journal = {Climate of the Past},
+	number = {3},
+	pages = {635--662},
+	title = {{Probabilistic precipitation and temperature downscaling of the Twentieth Century Reanalysis over France}},
+	volume = {12},
+	year = {2016}
+}
+@article{Brigode2016,
+	author = {Brigode, Pierre and Brissette, Fran{\c{c}}ois and Nicault, Antoine and Perreault, Luc and Kuentz, Anna and Mathevet, Thibault and Gailhard, Jo{\"{e}}l},
+	doi = {10.5194/cp-2016-5},
+	issn = {1814-9359},
+	journal = {Climate of the Past},
+	keywords = {2 read immediately},
+	number = {9},
+	pages = {1785--1804},
+	title = {{Streamflow variability over the 1881–2011 period in northern Qu{\'{e}}bec: comparison of hydrological reconstructions based on tree rings and geopotential height field reanalysis}},
+	url = {http://www.clim-past-discuss.net/cp-2016-5/},
+	volume = {12},
+	year = {2016}
+}
+@article{Bonnet2017,
+	author = {Bonnet, R. and Bo{\'{e}}, J. and Dayon, G. and Martin, E.},
+	doi = {10.1002/2017WR020596},
+	issn = {00431397},
+	journal = {Water Resources Research},
+	mendeley-tags = {2 read now},
+	pages = {1--17},
+	title = {{20th-Century Hydro-Meteorological Reconstructions to Study the Multidecadal Variations of the Water Cycle Over France}},
+	url = {http://doi.wiley.com/10.1002/2017WR020596},
+	volume = {53},
+	year = {2017}
+}
+@article{Timbal2003,
+	author = {Timbal, B and Dufour, A and Mcavaney, B},
+	doi = {10.1007/s00382-002-0298-9},
+	isbn = {0930-7575},
+	issn = {09307575},
+	journal = {Climate Dynamics},
+	keywords = {2 read now},
+	pages = {807--823},
+	title = {{An estimate of future climate change for western France using a statistical downscaling technique}},
+	url = {http://www.springerlink.com/content/940EKRKKEAAXFGR5},
+	volume = {20},
+	year = {2003}
+}
+@article{Wetterhall2005a,
+	author = {Wetterhall, Fredrik and Halldin, Sven and Xu, Chong-yu},
+	doi = {10.1016/j.jhydrol.2004.09.008},
+	issn = {00221694},
+	journal = {Journal of Hydrology},
+	keywords = {analogue method,downscaling,pca,precipitation,sweden,teweles-wobus score},
+	month = {may},
+	number = {1-4},
+	pages = {174--190},
+	title = {{Statistical precipitation downscaling in central Sweden with the analogue method}},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0022169404004275},
+	volume = {306},
+	year = {2005}
+}
+@article{Altava-Ortiz2006,
+	author = {Altava-Ortiz, V. and Barrera, A and Llasat, M C and Prat, M A and Gibergans-B{\'{a}}guena, J. and Barnolas, M.},
+	doi = {10.5194/adgeo-7-313-2006},
+	issn = {1680-7359},
+	journal = {Advances in Geosciences},
+	month = {apr},
+	pages = {313--319},
+	title = {{Application of the MM5 and the analogous method to heavy rainfall event, the case of 16 - 18 October 2003 in Catalonia (NE Spain)}},
+	url = {http://www.adv-geosci.net/7/313/2006/},
+	volume = {7},
+	year = {2006}
+}
+@article{Barrera2007,
+	author = {Barrera, A. and Altava-Ortiz, V. and Llasat, M. C. and Barnolas, M.},
+	doi = {10.5194/adgeo-12-121-2007},
+	issn = {1680-7359},
+	journal = {Advances in Geosciences},
+	keywords = {2 read now},
+	pages = {121--126},
+	title = {{Heavy rain prediction using deterministic and probabilistic models – the flash flood cases of 11 - 13 October 2005 in Catalonia ( NE Spain )}},
+	url = {http://www.adv-geosci.net/12/121/2007/},
+	volume = {12},
+	year = {2007}
+}
+@article{Cannon2007,
+	author = {Cannon, Alex J.},
+	doi = {10.1016/j.neunet.2007.04.002},
+	isbn = {0893-6080},
+	issn = {08936080},
+	journal = {Neural Networks},
+	number = {4},
+	pages = {444--453},
+	pmid = {17524616},
+	title = {{Nonlinear analog predictor analysis: A coupled neural network/analog model for climate downscaling}},
+	volume = {20},
+	year = {2007}
+}
+@article{Matulla2007,
+	author = {Matulla, C. and Zhang, X. and Wang, X. L. and Wang, J. and Zorita, E. and Wagner, S. and von Storch, H.},
+	doi = {10.1007/s00382-007-0277-2},
+	issn = {0930-7575},
+	journal = {Climate Dynamics},
+	month = {jul},
+	number = {2-3},
+	pages = {133--144},
+	title = {{Influence of similarity measures on the performance of the analog method for downscaling daily precipitation}},
+	url = {http://link.springer.com/10.1007/s00382-007-0277-2},
+	volume = {30},
+	year = {2007}
+}
+@article{Bliefernicht2007,
+	author = {Bliefernicht, Jan and B{\'{a}}rdossy, A.},
+	doi = {10.5194/nhess-7-263-2007},
+	issn = {1684-9981},
+	journal = {Natural Hazards and Earth System Sciences},
+	month = {apr},
+	number = {2},
+	pages = {263--269},
+	title = {{Probabilistic forecast of daily areal precipitation focusing on extreme events}},
+	url = {http://www.nat-hazards-earth-syst-sci.net/7/263/2007/},
+	volume = {7},
+	year = {2007}
+}
+@article{Maurer2008,
+	author = {Maurer, E. P. and Hidalgo, H. G.},
+	doi = {10.5194/hess-12-551-2008},
+	isbn = {1027-5606},
+	issn = {10275606},
+	journal = {Hydrology and Earth System Sciences},
+	number = {2},
+	pages = {551--563},
+	title = {{Utility of daily vs. monthly large-scale climate data: An intercomparison of two statistical downscaling methods}},
+	volume = {12},
+	year = {2008}
+}
+@article{Gangopadhyay2005,
+	author = {Gangopadhyay, Subhrendu and Clark, Martyn and Rajagopalan, Balaji},
+	doi = {10.1029/2004WR003444},
+	issn = {00431397},
+	journal = {Water Resources Research},
+	month = {feb},
+	number = {2},
+	pages = {W02024},
+	title = {{Statistical downscaling using K -nearest neighbors}},
+	url = {http://doi.wiley.com/10.1029/2004WR003444},
+	volume = {41},
+	year = {2005}
+}
+@article{BenDaoud2009,
+	author = {{Ben Daoud}, Aur{\'{e}}lien and Sauquet, Eric and Lang, Michel and Obled, Charles and Bontron, Guillaume},
+	doi = {10.1051/lhb/2009079},
+	issn = {0018-6368},
+	journal = {La Houille Blanche},
+	keywords = {2 extract references},
+	month = {jan},
+	number = {6},
+	pages = {60--65},
+	title = {{La pr{\'{e}}vision des pr{\'{e}}cipitations par recherche d'analogues : {\'{e}}tat de l'art et perspectives}},
+	year = {2009}
+}
+@article{Wu2012,
+	author = {Wu, Wanli and Liu, Yubao and Ge, Ming and Rostkier-Edelstein, Dorita and Descombes, Gael and Kunin, Pavel and Warner, Thomas and Swerdlin, Scott and Givati, Amir and Hopson, Thomas and Yates, David},
+	doi = {10.1016/j.atmosres.2012.07.019},
+	isbn = {0169-8095},
+	issn = {01698095},
+	journal = {Atmospheric Research},
+	keywords = {2 read soon,Climate model,Ensemble forecast,K-Nearest neighbors,Seasonal prediction,Southeastern Mediterranean,Statistical downscaling},
+	pages = {346--356},
+	publisher = {Elsevier B.V.},
+	title = {{Statistical downscaling of climate forecast system seasonal predictions for the Southeastern Mediterranean}},
+	url = {http://dx.doi.org/10.1016/j.atmosres.2012.07.019},
+	volume = {118},
+	year = {2012}
+}
+@article{Marty2012,
+	author = {Marty, Renaud and Zin, Isabella and Obled, Charles and Bontron, Guillaume and Djerboua, Abdelatif},
+	doi = {10.1175/JAMC-D-11-011.1},
+	isbn = {1558-8424},
+	issn = {15588424},
+	journal = {Journal of Applied Meteorology and Climatology},
+	month = {mar},
+	number = {3},
+	pages = {505--520},
+	title = {{Toward real-time daily PQPF by an analog sorting approach: Application to flash-flood catchments}},
+	volume = {51},
+	year = {2012}
+}
+@article{Teng2012,
+	author = {Teng, J. and Chiew, F. H S and Timbal, B. and Wang, Y. and Vaze, J. and Wang, B.},
+	doi = {10.1016/j.jhydrol.2012.09.024},
+	issn = {00221694},
+	journal = {Journal of Hydrology},
+	pages = {111--125},
+	publisher = {Elsevier B.V.},
+	title = {{Assessment of an analogue downscaling method for modelling climate change impacts on runoff}},
+	url = {http://dx.doi.org/10.1016/j.jhydrol.2012.09.024},
+	volume = {472-473},
+	year = {2012}
+}
+@article{Horton2012,
+	author = {Horton, Pascal and Jaboyedoff, Michel and Metzger, Richard and Obled, Charles and Marty, Renaud},
+	doi = {10.5194/nhess-12-777-2012},
+	journal = {Natural Hazards and Earth System Sciences},
+	pages = {777--784},
+	title = {{Spatial relationship between the atmospheric circulation and the precipitation measured in the western Swiss Alps by means of the analogue method}},
+	volume = {12},
+	year = {2012}
+}
+@article{Yiou2014,
+	author = {Yiou, P. and Boichu, M. and Vautard, R. and Vrac, M. and Jourdain, S. and Garnier, E. and Fluteau, F. and Menut, L.},
+	doi = {10.5194/cp-10-797-2014},
+	issn = {18149332},
+	journal = {Climate of the Past},
+	number = {2},
+	pages = {797--809},
+	title = {{Ensemble meteorological reconstruction using circulation analogues of 1781-1785}},
+	volume = {10},
+	year = {2014}
+}
+@article{Uppala2005,
+	author = {Uppala, S. M. and Kallberg, P. W. and Simmons, A. J. and Andrae, U. and {Da Costa Bechtold}, V. and Fiorino, M. and Gibson, J. K. and Haseler, J. and Hernandez, A. and Kelly, G. A. and Li, X. and Onogi, K. and Saarinen, S. and Sokka, N. and Allan, R. P. and Andersson, E. and Arpe, K. and Balmaseda, M. A. and Beljaars, A. C. M. and {Van De Berg}, L. and Bidlot, J. and Bormann, N. and Caires, S. and Chevallier, F. and Dethof, A. and Dragosavac, M. and Fisher, M. and Fuentes, M. and Hagemann, S. and H{\'{o}}lm, E. and Hoskins, B. J. and Isaksen, L. and Janssen, P. A. E. M. and Jenne, R. and Mcnally, A. P. and Mahfouf, J.-F. and Morcrette, J.-J. and Rayner, N. A. and Saunders, R. W. and Simon, P. and Sterl, A. and Trenberth, K. E. and Untch, A. and Vasiljevic, D. and Viterbo, P. and Woollen, J.},
+	doi = {10.1256/qj.04.176},
+	issn = {00359009},
+	journal = {Quarterly Journal of the Royal Meteorological Society},
+	month = {oct},
+	number = {612},
+	pages = {2961--3012},
+	title = {{The ERA-40 re-analysis}},
+	url = {http://doi.wiley.com/10.1256/qj.04.176},
+	volume = {131},
+	year = {2005}
+}
+@article{Willems2011b,
+	author = {Willems, P. and Vrac, M.},
+	doi = {10.1016/j.jhydrol.2011.02.030},
+	issn = {00221694},
+	journal = {Journal of Hydrology},
+	number = {3-4},
+	pages = {193--205},
+	publisher = {Elsevier B.V.},
+	title = {{Statistical precipitation downscaling for small-scale hydrological impact investigations of climate change}},
+	url = {http://dx.doi.org/10.1016/j.jhydrol.2011.02.030},
+	volume = {402},
+	year = {2011}
+}
+@article{JakobThemessl2011a,
+	author = {Themessl, Matthias Jakob and Gobiet, Andreas and Leuprecht, Armin},
+	doi = {10.1002/joc.2168},
+	isbn = {1097-0088},
+	issn = {08998418},
+	journal = {International Journal of Climatology},
+	number = {10},
+	pages = {1530--1544},
+	title = {{Empirical-statistical downscaling and error correction of daily precipitation from regional climate models}},
+	volume = {31},
+	year = {2011}
+}
+@article{BenDaoud2011,
+	author = {{Ben Daoud}, A. and Sauquet, E. and Lang, M. and Bontron, G. and Obled, C.},
+	doi = {10.5194/adgeo-29-103-2011},
+	issn = {16807340},
+	journal = {Advances in Geosciences},
+	number = {1997},
+	pages = {103--107},
+	title = {{Precipitation forecasting through an analog sorting technique: A comparative study}},
+	volume = {29},
+	year = {2011}
+}
+@article{Turco2011a,
+	author = {Turco, M. and Quintana-Segu{\'{i}}, P. and Llasat, M. C. and Herrera, S. and Guti{\'{e}}rrez, J. M. and Quintana-Segu??, P. and Llasat, M. C. and Herrera, S. and Guti??rrez, J. M.},
+	doi = {10.1029/2011JD016166},
+	isbn = {0148-0227},
+	issn = {01480227},
+	journal = {Journal of Geophysical Research Atmospheres},
+	number = {18},
+	pages = {1--14},
+	title = {{Testing MOS precipitation downscaling for ENSEMBLES regional climate models over Spain}},
+	volume = {116},
+	year = {2011}
+}
+@article{Franke2011,
+	author = {Franke, Joerg and Gonzalez-Rouco, J. Fidel and Frank, David and Graham, Nicholas E.},
+	doi = {10.1007/s00382-010-0802-6},
+	isbn = {0930-7575},
+	issn = {09307575},
+	journal = {Climate Dynamics},
+	number = {1},
+	pages = {133--150},
+	title = {{200 years of European temperature variability: Insights from and tests of the proxy surrogate reconstruction analog method}},
+	volume = {37},
+	year = {2011}
+}
+@article{Pascual2012b,
+	author = {Pascual, A. and Valero, F. and Mart{\'{i}}n, M. L. and Morata, A. and Luna, M. Y.},
+	doi = {10.1016/j.atmosres.2012.01.011},
+	isbn = {0169-8095},
+	issn = {01698095},
+	journal = {Atmospheric Research},
+	pages = {39--56},
+	publisher = {Elsevier B.V.},
+	title = {{Probabilistic and deterministic results of the ANPAF analog model for Spanish wind field estimations}},
+	url = {http://dx.doi.org/10.1016/j.atmosres.2012.01.011},
+	volume = {108},
+	year = {2012}
+}
+@article{Schenk2012,
+	author = {Schenk, F. and Zorita, E.},
+	doi = {10.5194/cp-8-1681-2012},
+	issn = {18149324},
+	journal = {Climate of the Past},
+	number = {5},
+	pages = {1681--1703},
+	title = {{Reconstruction of high resolution atmospheric fields for Northern Europe using analog-upscaling}},
+	volume = {8},
+	year = {2012}
+}
+@article{Ribalaygua2013a,
+	author = {Ribalaygua, J. and Torres, L. and P{\'{o}}rtoles, J. and Monjo, R. and Gait{\'{a}}n, E. and Pino, M. R.},
+	doi = {10.1007/s00704-013-0836-x},
+	issn = {0177798X},
+	journal = {Theoretical and Applied Climatology},
+	number = {1-2},
+	pages = {253--269},
+	title = {{Description and validation of a two-step analogue/regression downscaling method}},
+	volume = {114},
+	year = {2013}
+}
+@article{Osca2013,
+	author = {Osca, J. and Romero, R. and Alonso, S.},
+	doi = {10.1016/j.gloplacha.2013.08.001},
+	issn = {09218181},
+	journal = {Global and Planetary Change},
+	pages = {46--63},
+	publisher = {Elsevier B.V.},
+	title = {{Precipitation projections for Spain by means of a weather typing statistical method}},
+	url = {http://dx.doi.org/10.1016/j.gloplacha.2013.08.001},
+	volume = {109},
+	year = {2013}
+}
+@article{Radanovics2013,
+	author = {Radanovics, Sabine and Vidal, J.-P. and Sauquet, Eric and {Ben Daoud}, Aur{\'{e}}lien and Bontron, Guillaume},
+	doi = {10.5194/hess-17-4189-2013},
+	issn = {1607-7938},
+	journal = {Hydrology and Earth System Sciences},
+	number = {10},
+	pages = {4189--4208},
+	title = {{Optimising predictor domains for spatially coherent precipitation downscaling}},
+	volume = {17},
+	year = {2013}
+}
+@article{Martin2014b,
+	author = {Mart{\'{i}}n, M. L. and Valero, F. and Pascual, A. and Sanz, J. and Frias, L.},
+	doi = {10.1016/j.atmosres.2014.02.012},
+	issn = {01698095},
+	journal = {Atmospheric Research},
+	pages = {238--249},
+	publisher = {Elsevier B.V.},
+	title = {{Analysis of wind power productions by means of an analog model}},
+	url = {http://dx.doi.org/10.1016/j.atmosres.2014.02.012},
+	volume = {143},
+	year = {2014}
+}
+@article{Chardon2014,
+	author = {Chardon, Jeremy and Hingray, Beno{\^{i}}t and Favre, Anne-Catherine and Autin, Philemon and Gailhard, Jo{\"{e}}l and Zin, Isabella and Obled, Charles},
+	doi = {10.1175/JCLI-D-13-00464.1},
+	issn = {0894-8755},
+	journal = {Journal of Climate},
+	keywords = {2 read now},
+	month = {jul},
+	number = {13},
+	pages = {5056--5074},
+	title = {{Spatial Similarity and Transferability of Analog Dates for Precipitation Downscaling over France}},
+	volume = {27},
+	year = {2014}
+}
+@article{Raynaud2016b,
+	author = {Raynaud, Damien and Hingray, Benoit and Zin, Isabella and Anquetin, Sandrine and Debionne, Samuel and Vautard, Robert},
+	doi = {10.1002/joc.4844},
+	issn = {08998418},
+	journal = {International Journal of Climatology},
+	title = {{Atmospheric analogues for physically consistent scenarios of surface weather in Europe and Maghreb}},
+	url = {http://doi.wiley.com/10.1002/joc.4844},
+	year = {2016}
+}
+@article{Vanvyve2015,
+	author = {Vanvyve, Emilie and {Delle Monache}, Luca and Monaghan, Andrew J. and Pinto, James O.},
+	doi = {10.1016/j.renene.2014.08.060},
+	issn = {09601481},
+	journal = {Renewable Energy},
+	pages = {761--773},
+	publisher = {Elsevier Ltd},
+	title = {{Wind resource estimates with an analog ensemble approach}},
+	volume = {74},
+	year = {2015}
+}
+@article{Dayon2015,
+	author = {Dayon, G. and Bo{\'{e}}, J. and Martin, E.},
+	doi = {10.1002/2014JD022236},
+	issn = {2169897X},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	keywords = {2 read now},
+	month = {feb},
+	number = {3},
+	pages = {1023--1043},
+	title = {{Transferability in the future climate of a statistical downscaling method for precipitation in France}},
+	volume = {120},
+	year = {2015}
+}
+@article{Koukidis2009,
+	author = {Koukidis, E.N. and Berg, A.a.},
+	doi = {10.3137/AO924.2009},
+	isbn = {9780494338797},
+	issn = {0705-5900},
+	journal = {Atmosphere-Ocean},
+	number = {1},
+	pages = {1--18},
+	title = {{Sensitivity of the Statistical DownScaling Model (SDSM) to reanalysis products}},
+	url = {http://dx.doi.org/10.3137/AO924.2009{\%}5Cnhttp://www.tandfonline.com/doi/abs/10.3137/AO924.2009},
+	volume = {47},
+	year = {2009}
+}
+
+
+
